<resources>
    <string name="app_name">Password Manager</string>

    <!--Action Bar names-->
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="addItem">Add</string>

    <!--activity_login names-->
    <string name="welcomeMessage">Welcome</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>

    <!--Account Labels list names -->
    <string name="accountLabel">Account: </string>
    <string name="usernameLabel">Username: </string>
    <string name="passwordLabel">Password: </string>
    <string name="websiteLabel">Website: </string>
    <string name="notesLabel">Notes: </string>
    <string name="nothing">N/A</string>
    <!-- Button Labels-->
    <string name="btnShow">Show</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDelete">Delete</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>


</resources>
