<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/welcomeMessage" />

    <EditText
        android:id="@+id/loginPasswordField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/showHideBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Show"
        android:background="#cac8c0"

        android:bottom="10dp"
        android:left="10dp"
        android:right="10dp"
        android:top="10dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:background="#5eb246"/>
    <!--
    <ImageView
        android:layout_width=""
        android:layout_height="" /> -->

</LinearLayout>